--- a/views/footer.html
+++ b/views/footer.html
@@ -1,2 +1,61 @@
-</body>
-</html>
+    <footer>
+     <div class="container">
+        <div class="row row-centered">
+            <div class="col-sm-12 col-md-12 col-lg-12 col-centered">
+                <div class="transitionFadeInDown firstTransition">
+                    <ul>
+                        <li><a href="#"><img class="icone" src="images/icons/IconeFacebook.svg" alt="Icone Facebook" /></a></li>
+                        <li><a href="#"><img class="icone" src="images/icons/IconeYoutube.svg" alt="Icone YouTube" /></a></li>
+                        <li><a href="#"><img class="icone" src="images/icons/IconeInstagram.svg" alt="Icone Instagram" /></a></li>
+                        <li><a href="#"><img class="icone" src="images/icons/IconeTwitter.svg" alt="Icone Twitter" /></a></li>
+                        <li><a href="#"><img class="icone" src="images/icons/IconeGoogleplus.svg" alt="Icone Google+" /></a></li>
+                        <li><a href="#"><img class="icone" src="images/icons/IconeRss.svg" alt="Icone RSS" /></a></li>
+                        <li><a href="#"><img class="icone" src="images/icons/IconeLinkedin.svg" alt="Icone Linkedin" /></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <p class="transitionFadeInLeft secondTransition">© 2014 Your Company. All rights reserved.</p>
+</footer>
+
+<!-- jQuery -->
+<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+
+<!-- Hands.js -->
+<script type="text/javascript" src="js/hand-1.3.8.js"></script>
+
+<!-- Lightbox -->
+<script type="text/javascript" src="js/lightbox.min.js"></script>
+
+<!-- Waypoints -->
+<script type="text/javascript" src="js/waypoints.min.js"></script>
+
+<!-- Include Owl Carousel plugin -->
+<script type="text/javascript" src="js/owl.carousel.min.js"></script>
+
+<!-- IE specific files -->
+<script type="text/javascript" src="js/modernizr.custom.js"></script>
+
+<!-- countUp -->
+<script type="text/javascript" src="js/countUp.min.js"></script>
+
+<!-- Sticky -->
+<script type="text/javascript" src="js/jquery.sticky.js"></script>
+
+<!-- ScrollTo -->
+<script type="text/javascript" src="js/jquery.scrollTo.min.js"></script>
+
+<!-- Navigation -->
+<script type="text/javascript" src="js/nav.min.js"></script>
+
+<!-- Style -->
+<script type="text/javascript" src="js/style.min.js"></script>
+
+    <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+      <script src="js/respond.min.js"></script>
+      <![endif]-->
+
+  </body>
+  </html>
